Move the file to the "Website" file

--- a/NTFCard/Website/index.html
+++ b/NTFCard/Website/index.html
@@ -13,22 +13,22 @@
     <!-- Card -->
     <section class="containner">
         <div class="card">
-            <div class="card_image" ><a href="#"><img src="../nft-preview-card-component-main/images/image-equilibrium.jpg"></a></div>
+            <div class="card_image" ><a href="#"><img src="nft-preview-card-component-main/images/image-equilibrium.jpg"></a></div>
             <div class="card_title"><a href="#"><b>Equilibrium #3429</b></a></div>
             <div class="card_discription">Our Equilibrium collection promotes balance and calm.</div>
             <div class="icons">
                 <div class="icon_ethereum">
-                    <div class="card_price"><img src="../nft-preview-card-component-main/images/icon-ethereum.svg"></div>
+                    <div class="card_price"><img src="nft-preview-card-component-main/images/icon-ethereum.svg"></div>
                     <div class="card_price">0.041 ETH</div>
                 </div>
                 <div class="icon_clock">
-                    <div class="card_time"><img src="../nft-preview-card-component-main/images/icon-clock.svg"></div>
+                    <div class="card_time"><img src="nft-preview-card-component-main/images/icon-clock.svg"></div>
                     <div class="card_time">3 days left</div>
                 </div> 
             </div>
             <hr>
             <div class="artist">
-                <div class="user_logo"><img src="../nft-preview-card-component-main/images/image-avatar.png"></div>
+                <div class="user_logo"><img src="nft-preview-card-component-main/images/image-avatar.png"></div>
                 <div class="user_name">Creation of <a href="#"><b>Jules Wyvern</b></a></div>
             </div>
         </div>
